--- a/package.json
+++ b/package.json
@@ -12,33 +12,34 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "class-transformer": "^0.3.1",
-    "class-validator": "^0.12.2",
-    "class-validator-jsonschema": "^2.2.0",
-    "dotenv": "^16.0.0",
-    "dotenv-defaults": "^5.0.0",
-    "koa": "^2.13.4",
+    "axios": "^1.3.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "class-validator-jsonschema": "^5.0.0",
+    "dotenv": "^16.0.3",
+    "dotenv-defaults": "^5.0.2",
+    "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
     "koa-multer": "^1.0.2",
-    "koa-router": "^10.1.1",
-    "prettier": "^2.6.2",
+    "koa-router": "^12.0.0",
+    "prettier": "^2.8.4",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "routing-controllers": "^0.9.0",
-    "routing-controllers-openapi": "^3.1.0",
-    "ts-node": "^10.7.0",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.3"
+    "rimraf": "^4.1.2",
+    "routing-controllers": "^0.10.1",
+    "routing-controllers-openapi": "^4.0.0",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.1",
-    "@types/koa": "^2.13.4",
-    "@types/koa-bodyparser": "^4.3.7",
+    "@types/jest": "^29.4.0",
+    "@types/koa": "^2.13.5",
+    "@types/koa-bodyparser": "^4.3.10",
     "@types/koa-router": "^7.4.4",
-    "@types/node": "^17.0.14",
-    "jest": "^27.5.1",
-    "supertest": "^6.2.2",
-    "ts-jest": "^27.1.4"
+    "@types/node": "^18.13.0",
+    "jest": "^29.4.2",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5"
   }
 }
